Fixed mobile overflow issue

--- a/src/style.scss
+++ b/src/style.scss
@@ -42,6 +42,7 @@ body, html {
   flex-wrap: wrap;
   text-align: center;
   vertical-align: middle;
+  overflow: hidden;
 }
 .content > div {
   background-repeat: no-repeat;
